--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   firebase_core: ^2.25.1
+  get_it: ^7.6.7
+  firebase_auth: ^4.17.3
+  cloud_firestore: ^4.15.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
