--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   dartz: ^0.10.1
   uuid: ^4.3.3
   url_strategy: ^0.2.0
-  intl: ^0.19.0
+  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +33,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
