--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.5
   flutter_modular: ^6.0.4+1
+  firebase_storage: ^11.6.9
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
