--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   firebase_storage: ^11.6.9
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
+  flutter_dropzone: ^3.0.7
+  http: ^1.2.0
+  bloc_concurrency: ^0.2.4
+  easy_image_viewer: ^1.4.1
 
 dev_dependencies:
   flutter_test:
