--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  
+  # Change assets/images to assets/assets/images for release build
   assets:
     - assets/images/
 
