--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
   flutter_dropzone: ^3.0.7
-  http: ^1.2.0
   bloc_concurrency: ^0.2.4
   easy_image_viewer: ^1.4.1
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
