splitted recommendations cubit into two cubits and added grid for promoters

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   easy_image_viewer: ^1.4.1
   mockito: ^5.4.4
   build_runner: ^2.4.8
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
