--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   mockito: ^5.4.4
   build_runner: ^2.4.8
   collection: ^1.18.0
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
