--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   build_runner: ^2.4.8
   collection: ^1.18.0
   flutter_staggered_animations: ^1.1.1
+  firebase_auth_mocks: ^0.13.0
 
 dev_dependencies:
   flutter_test:
