--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   responsive_framework: ^1.1.1
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   firebase_core: ^2.25.1
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.15.3
@@ -29,13 +29,14 @@ dependencies:
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
   flutter_dropzone: ^3.0.7
-  bloc_concurrency: ^0.2.4
+  bloc_concurrency: ^0.2.5
   easy_image_viewer: ^1.4.1
   mockito: ^5.4.4
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   collection: ^1.18.0
   flutter_staggered_animations: ^1.1.1
   firebase_auth_mocks: ^0.13.0
+  cloud_functions: ^4.6.8
 
 dev_dependencies:
   flutter_test:
