--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   firebase_auth_mocks: ^0.13.0
   cloud_functions: ^4.6.8
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
