--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_functions: ^4.6.8
   http: ^1.2.0
   emoji_picker_flutter: ^2.2.0
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
