--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - build
 
 before_script:
-   Cache-Verzeichnis definieren
+  # Cache-Verzeichnis definieren
   - flutter config --enable-web
   - flutter pub get
 
