--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,14 @@ build:
 
 test:
   stage: test
+  before_script:
+    - apt-get install -y lcov
   script:
     - flutter test --coverage
+  after_script:
+    - genhtml coverage/lcov.info -o coverage/html
   artifacts:
-    paths:
-      - coverage/
+    when: always
+    reports:
+      junit:
+        - junit-report.xml
