Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,9 @@ test:
     - flutter test --coverage
   rules:
     - when: always
+  artifacts:
+    paths:
+      - coverage/lcov.info
 
 coverage:
   stage: coverage
