--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   firebase_core: ^2.25.1
   firebase_auth: ^4.17.3
+  firebase_app_check: ^0.2.2+7
   cloud_firestore: ^4.15.3
   dartz: ^0.10.1
   uuid: ^4.3.3
