--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,16 @@
 {
   "hosting": {
+    "headers": [
+      {
+        "source": "/assets/fonts/woff2/**/*.woff2",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ],
     "public": "build/web",
     "ignore": [
       "firebase.json",
