--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   emoji_picker_flutter: ^3.1.0
   universal_html: ^2.2.4
   flex_color_picker: ^3.6.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
