--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   universal_html: ^2.2.4
   flex_color_picker: ^3.6.0
   rxdart: ^0.28.0
+  flutter_iconpicker: ^4.0.1
 
 dev_dependencies:
   flutter_test:
