--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.0
   emoji_picker_flutter: ^3.1.0
   universal_html: ^2.2.4
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
