--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,14 @@ analyzer:
     - lib/l10n/generated/**
     - test/**
 
+dart_code_metrics:
+  extends:
+    - recommended
+
+  rules:
+    prefer-match-file-name: false
+    avoid-dynamic: false
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
