--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ cache:
 build:
   stage: build
   script:
-    - flutter build web --release --no-tree-shake-icons
+    - flutter build web --release --no-tree-shake-icons --verbose
   rules:
     - when: always
   artifacts:
