Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ workflow:
 
 before_script:
   # Cache-Verzeichnis definieren
+  - flutter clean
   - flutter config --enable-web
   - flutter pub get
 
