added reco manager empty page and fixed menu routing bug that browser back action produces strange menu behaviour

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "name": "finanzbegleiter (profile mode)",
             "request": "launch",
             "type": "dart",
+            "deviceId": "chrome",
             "flutterMode": "profile"
         },
         {
