logo is now visible in release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   # Change assets/images to assets/assets/images for release build
   assets:
     - assets/images/
+    - assets/images/logo/
+    - assets/images/icons/
 
   fonts:
     - family: Poppins
