--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,11 @@
-name: Build and Test Flutter Web App
-run-name: running build and tests by @${{ github.actor }}
+name: CI/CD
+run-name: ${{ github.event.head_commit.message }} by @${{ github.actor }}
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-    types: [ready_for_review]
+    branches: [ "*" ]
 
 jobs:
   build-and-test:
@@ -32,12 +31,3 @@ jobs:
 
       - name: Test With Coverage
         run: flutter test --coverage
-
-      - name: notify telegram
-        uses: de-trustleap/shared-actions/notify-telegram@v1
-        with:
-          TELEGRAM_BOT_TO: ${{ vars.TELEGRAM_BOT_TO }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-
-      - name: set build status
-        uses: de-trustleap/shared-actions/set-build-status@v1
