--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   dartz: ^0.10.1
   uuid: ^4.3.3
   url_strategy: ^0.3.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
   equatable: ^2.0.5
@@ -54,7 +54,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-  generate: false
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
