--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_iconpicker: ^4.0.1
   web: ^1.1.1
   sentry_flutter: ^9.0.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
