--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   web: ^1.1.1
   sentry_flutter: ^9.0.0
   fl_chart: ^1.0.0
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
