--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_code_editor: ^0.3.5
   flutter_highlight: ^0.7.0
   highlight: ^0.7.0
+  html_editor_enhanced: ^2.7.1
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
