--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,4 +30,4 @@ jobs:
         run: flutter build web --release --no-tree-shake-icons --verbose
 
       - name: Test With Coverage
-        run: flutter test --coverage
+        run: ./scripts/flutter_test.sh
