--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   highlight: ^0.7.0
   html_editor_enhanced: ^2.7.1
   flutter_html: ^3.0.0
+  file_picker: ^10.3.3
 
 dev_dependencies:
   flutter_test:
